--- a/css/app.css
+++ b/css/app.css
@@ -40,7 +40,7 @@ h1 {
 .deck {
     width: 660px;
     min-height: 680px;
-    background: linear-gradient(160deg, #7986f8 0%, #857692 100%);
+    background: linear-gradient(160deg, #8ec2fd 0%, #4b77a8 100%);
     padding: 32px;
     border-radius: 10px;
     box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
