--- a/css/app.css
+++ b/css/app.css
@@ -17,6 +17,7 @@ body {
 }
 
 body {
+    margin-top: 1%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -26,11 +27,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    overflow: hidden;
     background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
 }
